<resources>
    <string name="app_name">Я кондитер</string>
    <string name="customer">"Кому:"</string>
    <string name="cake">"Торт:"</string>
    <string name="orderDate">"Дата заказа:"</string>
    <string name="sendDate">"Дата отправки:"</string>
    <string name="weight">"Масса:"</string>
    <string name="weight_with_unit">Масса(кг) :</string>
    <string name="price">"Цена:"</string>
    <string name="made">"Выполнен"</string>
    <string name="weight_unit">"кг"</string>
    <string name="price_unit">"руб."</string>
    <string name="add">"Добавить"</string>
    <string name="edit">"Редактировать"</string>
    <string name="remove">"Удалить"</string>
    <string name="madeTrue">"Да"</string>
    <string name="madeFalse">"Нет"</string>
    <string name="ok">"Сохранить"</string>
    <string name="cancel">"Отмена"</string>
    <string name="checkDate">"Проверьте дату"</string>
    <string name="checkView">"Проверьте данные"</string>
    <string name="added">"Добавлено"</string>
    <string name="changed">"Изменено"</string>
    <string name="orderNumber">"Номер заказа:"</string>
    <string name="orderAdd">"Новый заказ"</string>
    <string name="noOrders">"Добавьте свой \nпервый заказ"</string>
    <string name="orderCount">"Заказов:"</string>
    <!--    TopLevelActivity-->
    <string name="ordersItem">"Заказы"</string>
    <string name="recipesItem">"Рецепты"</string>
    <string name="tipsItem">"Советы"</string>
    <string name="otherItem">"Другое"</string>

    <!--    SplashActivity-->
    <string name="partner">Совместо с @SHIRIN_CAKES_</string>
    <!--    Tips-->
    <string name="tip_unlock_text">нажмите что-бы открыть совет</string>
    <string name="tip_lock_text">скоро...</string>

    <!--    Recipe-->
    <string name="diff_easy">Легко</string>
    <string name="diff_meduim">Средне</string>
    <string name="diff_hard">Сложно</string>
    <string name="step_title">Шаг </string>
    <string name="recipe_ingredients">Ингредиенты</string>
    <string name="pay_content">Приобрести продолжение</string>

<!--    OtherActivity-->
    <string name="app_add">Я кондитер-PRO</string>
    <string name="add_off">Отключить рекламу</string>

<!--    CardView -->
    <string name="hour_unit">ч.</string>
    <string name="minute_unit">мин.</string>
    <string name="about_symbol">~</string>

<!--    Notifications-->
    <string name="greeting">Привет,Кондитер!</string>
    <string name="today_has_order">Сегодня заказ:</string>
    <string name="new_tip">Новый совет!</string>
    
<!--    dialog-->
    <string name="recipe_pay_thanks">Благодарим вас за покупку.\nПриятного аппетита!</string>
    <string name="add_pay_thanks">Благодарим вас за покупку!</string>
    <string name="dialog_btn_title">Отлично</string>
    <string name="tips_dialog">Каждый день для Вас - новый совет или факт</string>
</resources>

