<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_marginBottom="2dp">

    <TextView
        android:id="@+id/orderIdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderNumber"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@color/colorPink"
        android:textColor="#ffffff"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:id="@+id/customerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="18sp"
        android:text="@string/customer"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/cakeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="18sp"
        android:text="@string/cake"/>
    <TextView
        android:id="@+id/orderDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="18sp"
        android:text="@string/orderDate"/>
    <TextView
        android:id="@+id/sendDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="18sp"
        android:text="@string/sendDate"/>
    <TextView
        android:id="@+id/weightView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="18sp"
        android:text="@string/weight"/>
    <TextView
        android:id="@+id/priceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="18sp"
        android:text="@string/price"/>
    <CheckBox
        android:id="@+id/madeBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/made"
        android:textSize="18sp" />
    <Button
        android:id="@+id/editBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPink"
        android:textColor="#ffffff"
        android:text="@string/edit" />
    <Button
        android:id="@+id/removeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove"/>
</LinearLayout>