<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/basic_padding">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/btn_background"
        android:onClick="btnClick"
        android:text="@string/ordersItem"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FA0F88"
        android:textSize="@dimen/basic_text_size" />

    <Button
        android:id="@+id/recipesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderBtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/btn_background"
        android:text="@string/recipesItem"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/basic_text_size"
        android:textColor="#FA0F88"
        android:onClick="btnClick"/>

    <Button
        android:id="@+id/tipsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipesBtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/btn_background"
        android:text="@string/tipsItem"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FA0F88"
        android:textSize="@dimen/basic_text_size"
        android:onClick="btnClick"
        />

    <Button
        android:id="@+id/otherBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tipsBtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/btn_background"
        android:text="@string/otherItem"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FA0F88"
        android:textSize="@dimen/basic_text_size"
        android:onClick="btnClick"
        />




</RelativeLayout>